--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,21 @@
-$body-bg:			#2ecc71;
-$navbar-default-bg:				#2c3e50;
-$navbar-default-link-color:			#ecf0f1;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
+$body-bg:			#bdc3c7;
+$font-family-sans-serif:	'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height: 		45px;
+$navbar-default-bg:				#ecf0f1;
+$navbar-default-brand-color:		#2c3e50;
+$navbar-default-link-color:			#7f8c8d;
+$brand-primary:									#2c3e50;
+$jumbotron-bg:									#ecf0f1;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
+
