--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,18 +19,18 @@
     <% end %>
 
     <div class="form-group">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "off" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
-    <div class="form-group">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :new_password, autocomplete: "off" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :new_password_confirmation %><br />
+      <%= f.password_field :new_password_confirmation, autocomplete: "off" %>
     </div>
 
     <div class="form-group">
