--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,12 +25,12 @@
 
     <div class="form-group">
       <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :new_password, autocomplete: "off" %>
+      <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
     <div class="form-group">
       <%= f.label :new_password_confirmation %><br />
-      <%= f.password_field :new_password_confirmation, autocomplete: "off" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
 
     <div class="form-group">
